# server/internal/docs/swagger.json
@@ -25,11 +25,13 @@
                 "operationId": "login",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "username",
                         "name": "username",
-                        "in": "query",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.LoginDTO"
+                        }
                     }
                 ],
                 "responses": {
@@ -60,7 +62,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/domain.SignupDTO"
                         }
                     }
                 ],
@@ -317,6 +319,17 @@
                 ],
                 "summary": "Add new task",
                 "operationId": "post_task",
+                "parameters": [
+                    {
+                        "description": "task object",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.CreateTaskDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -510,6 +523,56 @@
                 }
             }
         },
+        "domain.CreateTaskDTO": {
+            "type": "object",
+            "required": [
+                "title"
+            ],
+            "properties": {
+                "deadline": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string",
+                    "maxLength": 256
+                },
+                "estimated": {
+                    "type": "integer",
+                    "maximum": 86400,
+                    "minimum": 0
+                },
+                "icon": {
+                    "type": "integer",
+                    "maximum": 16,
+                    "minimum": 0
+                },
+                "importance": {
+                    "type": "integer",
+                    "maximum": 10,
+                    "minimum": 0
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 64
+                },
+                "urgency": {
+                    "type": "integer",
+                    "maximum": 10,
+                    "minimum": 0
+                }
+            }
+        },
+        "domain.LoginDTO": {
+            "type": "object",
+            "required": [
+                "username"
+            ],
+            "properties": {
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.Question": {
             "type": "object",
             "properties": {
@@ -517,6 +580,17 @@
                     "type": "integer"
                 },
                 "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.SignupDTO": {
+            "type": "object",
+            "required": [
+                "username"
+            ],
+            "properties": {
+                "username": {
                     "type": "string"
                 }
             }
